--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 :root {
 	/* Colors */
 	--main-color: #00587d;
-	--main-color-transparent: #00587d20;
+	--main-color-transparent: #00587d10;
 	--green-color: #358551;
 	/* --green-color: #2f8d3e; */
+	--prova: #eff5f7;
 }
 * {
 	margin: 0;
@@ -251,8 +252,8 @@ img {
 	margin-right: 0.2em;
 }
 .qr-code-image {
-	width: 68vw;
-	height: 68vw;
+	width: 67vw;
+	height: 67vw;
 	margin: 1.45em calc((100% - 68vw) / 2);
 	/* background-color: blue; */
 	display: inline-flex;
@@ -276,15 +277,16 @@ img {
 	line-height: 0.45em;
 }
 .qr-button-text {
-	height: 33%;
+	height: 40%;
 	font-size: 0.93em;
 	font-weight: 600;
 	/* background-color: #ffffff; */
+	line-height: 2em;
 }
 .ticket-infos {
 	width: 100%;
-	height: 62%;
-	margin-top: 5%;
+	height: 58%;
+	margin-top: 2%;
 	display: inline-flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -346,7 +348,7 @@ img {
 .ticket-animation {
 	width: 100%;
 	height: 14.75vw;
-	margin-top: 0.05em;
+	margin-top: 0.02em;
 	/* background-color: red; */
 	/* background-color: #00000010; */
 	overflow: hidden;
@@ -445,4 +447,11 @@ img {
 	align-items: center;
 	margin-top: 0.5em;
 	margin-bottom: 0.85em;
+}
+.ticket-code {
+	display: inline-flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: center;
+	line-height: 1em;
 }
